Summary table left correction on the value passed from js n overall minor changes on frontend

--- a/index_ori.html
+++ b/index_ori.html
@@ -125,12 +125,188 @@
                 <td>States</td>
                 <td class="text-right">Cases</td>
                 <td class="text-right">Trend</td>
-                <td class="text-right">Hospital Admission</td>
-                <td class="text-right">Hospital Bed Utilization</td>
-                <td class="text-right">Recovered Cases</td>
+                <td class="text-right">Hospital <br />Admission</td>
+                <td class="text-right">Trend</td>
+                <td class="text-right">Recovered <br />Cases</td>
                 <td class="text-right">Trend</td>
                 <td class="text-right">Deaths</td>
                 <td class="text-right">Trend</td>
+              </tr>
+              <tr>
+                <td>Johor</td>
+                <td class="text-right" id="johor-cases"></td>
+                <td class="text-right" id="johor-caseT"></td>
+                <td class="text-right" id="johor-hospitalA"></td>
+                <td class="text-right" id="johor-hospitalT"></td>
+                <td class="text-right" id="johor-recovered"></td>
+                <td class="text-right" id="johor-recoveredT"></td>
+                <td class="text-right" id="johor-deaths"></td>
+                <td class="text-right" id="johor-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Kedah</td>
+                <td class="text-right" id="kedah-cases"></td>
+                <td class="text-right" id="kedah-caseT"></td>
+                <td class="text-right" id="kedah-hospitalA"></td>
+                <td class="text-right" id="kedah-hospitalT"></td>
+                <td class="text-right" id="kedah-recovered"></td>
+                <td class="text-right" id="kedah-recoveredT"></td>
+                <td class="text-right" id="kedah-deaths"></td>
+                <td class="text-right" id="kedah-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Kelantan</td>
+                <td class="text-right" id="kltn-cases"></td>
+                <td class="text-right" id="kltn-caseT"></td>
+                <td class="text-right" id="kltn-hospitalA"></td>
+                <td class="text-right" id="kltn-hospitalT"></td>
+                <td class="text-right" id="kltn-recovered"></td>
+                <td class="text-right" id="kltn-recoveredT"></td>
+                <td class="text-right" id="kltn-deaths"></td>
+                <td class="text-right" id="kltn-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Melaka</td>
+                <td class="text-right" id="mlk-cases"></td>
+                <td class="text-right" id="mlk-caseT"></td>
+                <td class="text-right" id="mlk-hospitalA"></td>
+                <td class="text-right" id="mlk-hospitalT"></td>
+                <td class="text-right" id="mlk-recovered"></td>
+                <td class="text-right" id="mlk-recoveredT"></td>
+                <td class="text-right" id="mlk-deaths"></td>
+                <td class="text-right" id="mlk-deathsT"></td>
+              </tr>
+              <tr>
+                <td>N. Sembilan</td>
+                <td class="text-right" id="n9-cases"></td>
+                <td class="text-right" id="n9-caseT"></td>
+                <td class="text-right" id="n9-hospitalA"></td>
+                <td class="text-right" id="n9-hospitalT"></td>
+                <td class="text-right" id="n9-recovered"></td>
+                <td class="text-right" id="n9-recoveredT"></td>
+                <td class="text-right" id="n9-deaths"></td>
+                <td class="text-right" id="n9-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Pahang</td>
+                <td class="text-right" id="pahang-cases"></td>
+                <td class="text-right" id="pahang-caseT"></td>
+                <td class="text-right" id="pahang-hospitalA"></td>
+                <td class="text-right" id="pahang-hospitalT"></td>
+                <td class="text-right" id="pahang-recovered"></td>
+                <td class="text-right" id="pahang-recoveredT"></td>
+                <td class="text-right" id="pahang-deaths"></td>
+                <td class="text-right" id="pahang-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Perak</td>
+                <td class="text-right" id="perak-cases"></td>
+                <td class="text-right" id="perak-caseT"></td>
+                <td class="text-right" id="perak-hospitalA"></td>
+                <td class="text-right" id="perak-hospitalT"></td>
+                <td class="text-right" id="perak-recovered"></td>
+                <td class="text-right" id="perak-recoveredT"></td>
+                <td class="text-right" id="perak-deaths"></td>
+                <td class="text-right" id="perak-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Perlis</td>
+                <td class="text-right" id="perlis-cases"></td>
+                <td class="text-right" id="perlis-caseT"></td>
+                <td class="text-right" id="perlis-hospitalA"></td>
+                <td class="text-right" id="perlis-hospitalT"></td>
+                <td class="text-right" id="perlis-recovered"></td>
+                <td class="text-right" id="perlis-recoveredT"></td>
+                <td class="text-right" id="perlis-deaths"></td>
+                <td class="text-right" id="perlis-deathsT"></td>
+              </tr>
+              <tr>
+                <td>P. Pinang</td>
+                <td class="text-right" id="ppinang-cases"></td>
+                <td class="text-right" id="ppinang-caseT"></td>
+                <td class="text-right" id="ppinang-hospitalA"></td>
+                <td class="text-right" id="ppinang-hospitalT"></td>
+                <td class="text-right" id="ppinang-recovered"></td>
+                <td class="text-right" id="ppinang-recoveredT"></td>
+                <td class="text-right" id="ppinang-deaths"></td>
+                <td class="text-right" id="ppinang-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Sabah</td>
+                <td class="text-right" id="sabah-cases"></td>
+                <td class="text-right" id="sabah-caseT"></td>
+                <td class="text-right" id="sabah-hospitalA"></td>
+                <td class="text-right" id="sabah-hospitalT"></td>
+                <td class="text-right" id="sabah-recovered"></td>
+                <td class="text-right" id="sabah-recoveredT"></td>
+                <td class="text-right" id="sabah-deaths"></td>
+                <td class="text-right" id="sabah-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Sarawak</td>
+                <td class="text-right" id="srwk-cases"></td>
+                <td class="text-right" id="srwk-caseT"></td>
+                <td class="text-right" id="srwk-hospitalA"></td>
+                <td class="text-right" id="srwk-hospitalT"></td>
+                <td class="text-right" id="srwk-recovered"></td>
+                <td class="text-right" id="srwk-recoveredT"></td>
+                <td class="text-right" id="srwk-deaths"></td>
+                <td class="text-right" id="srwk-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Selangor</td>
+                <td class="text-right" id="slngr-cases"></td>
+                <td class="text-right" id="slngr-caseT"></td>
+                <td class="text-right" id="slngr-hospitalA"></td>
+                <td class="text-right" id="slngr-hospitalT"></td>
+                <td class="text-right" id="slngr-recovered"></td>
+                <td class="text-right" id="slngr-recoveredT"></td>
+                <td class="text-right" id="slngr-deaths"></td>
+                <td class="text-right" id="slngr-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Terengganu</td>
+                <td class="text-right" id="trg-cases"></td>
+                <td class="text-right" id="trg-caseT"></td>
+                <td class="text-right" id="trg-hospitalA"></td>
+                <td class="text-right" id="trg-hospitalT"></td>
+                <td class="text-right" id="trg-recovered"></td>
+                <td class="text-right" id="trg-recoveredT"></td>
+                <td class="text-right" id="trg-deaths"></td>
+                <td class="text-right" id="trg-deathsT"></td>
+              </tr>
+              <tr>
+                <td>KL</td>
+                <td class="text-right" id="kl-cases"></td>
+                <td class="text-right" id="kl-caseT"></td>
+                <td class="text-right" id="kl-hospitalA"></td>
+                <td class="text-right" id="kl-hospitalT"></td>
+                <td class="text-right" id="kl-recovered"></td>
+                <td class="text-right" id="kl-recoveredT"></td>
+                <td class="text-right" id="kl-deaths"></td>
+                <td class="text-right" id="kl-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Labuan</td>
+                <td class="text-right" id="labuan-cases"></td>
+                <td class="text-right" id="labuan-caseT"></td>
+                <td class="text-right" id="labuan-hospitalA"></td>
+                <td class="text-right" id="labuan-hospitalT"></td>
+                <td class="text-right" id="labuan-recovered"></td>
+                <td class="text-right" id="labuan-recoveredT"></td>
+                <td class="text-right" id="labuan-deaths"></td>
+                <td class="text-right" id="labuan-deathsT"></td>
+              </tr>
+              <tr>
+                <td>Putrajaya</td>
+                <td class="text-right" id="ptjy-cases"></td>
+                <td class="text-right" id="ptjy-caseT"></td>
+                <td class="text-right" id="ptjy-hospitalA"></td>
+                <td class="text-right" id="ptjy-hospitalT"></td>
+                <td class="text-right" id="ptjy-recovered"></td>
+                <td class="text-right" id="ptjy-recoveredT"></td>
+                <td class="text-right" id="ptjy-deaths"></td>
+                <td class="text-right" id="ptjy-deathsT"></td>
               </tr>
             </table>
           </div>
@@ -151,10 +327,10 @@
     <!--Footer section ends here-->
 
     <script>
+      /*vaccination data per state*/
       drawStackedBar();
 
-      //const vaxData = getVaxMYData();
-      //
+      /*vaccination overview data*/
       (async () => {
         const {
           daily_administration,
@@ -177,6 +353,81 @@
         document.getElementById("total_s").innerHTML = total_seconddose;
         document.getElementById("total_b").innerHTML = total_booster;
       })();
+
+      /*summary table*/
+      (async () => {
+        const stateData = await getSummaryData();
+        console.log(stateData.Melaka);
+        vat = "mlk";
+        vat2 = "Melaka";
+        statenicknames = [
+          "johor",
+          "kedah",
+          "kltn",
+          "mlk",
+          "n9",
+          "pahang",
+          "perak",
+          "perlis",
+          "ppinang",
+          "sabah",
+          "srwk",
+          "slngr",
+          "trg",
+          "kl",
+          "labuan",
+          "ptjy",
+        ];
+        statenames = [
+          "Johor",
+          "Kedah",
+          "Kelantan",
+          "Melaka",
+          "Negeri Sembilan",
+          "Pahang",
+          "Perak",
+          "Perlis",
+          "Pulau Pinang",
+          "Sabah",
+          "Sarawak",
+          "Selangor",
+          "Terengganu",
+          "W.P. Kuala Lumpur",
+          "W.P. Labuan",
+          "W.P. Putrajaya",
+        ];
+        statenames.forEach((state, index) => {
+          const nickname = statenicknames[index];
+          console.log(state, nickname);
+          document.getElementById(nickname + "-cases").innerHTML = stateData[
+            state
+          ].avgCases
+            .toString()
+            .replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+          document.getElementById(nickname + "-caseT").innerHTML =
+            stateData[state].newCasesTrend;
+          document.getElementById(nickname + "-hospitalA").innerHTML =
+            stateData[state].avghospitalAdmission
+              .toString()
+              .replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+          document.getElementById(nickname + "-hospitalT").innerHTML =
+            stateData[state].hospitalAdmissionTrend;
+          document.getElementById(nickname + "-recovered").innerHTML =
+            stateData[state].avgRecoveredCases
+              .toString()
+              .replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+          document.getElementById(nickname + "-recoveredT").innerHTML =
+            stateData[state].recoveredCasesTrend;
+          document.getElementById(nickname + "-deaths").innerHTML = stateData[
+            state
+          ].avgDeaths
+            .toString()
+            .replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
+          document.getElementById(nickname + "-deathsT").innerHTML =
+            stateData[state].newDeathsTrend;
+        });
+      })();
+
       //console.log(vaxData);
       // let { baz, foo } = (function () {
       //   let foo = 0;
@@ -190,7 +441,7 @@
       // })();
       // console.log(baz);
 
-      getVaxStatesData();
+      //getVaxStatesData();
     </script>
   </body>
 </html>
