--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>>-->
     <script src="css/style.css"></script>
+    <style>
+      body {
+        background-color: #c8d6e5;
+      }
+
+      .container {
+        width: 90%;
+        margin: 0 auto;
+        padding: 1%;
+        background-color: white;
+        overflow: auto;
+        /*border: 1px solid black;*/
+      }
+    </style>
   </head>
   <body>
     <!-- <div class="container" style="height: 30%; width: 30%">
@@ -24,6 +38,42 @@
     <div class="container" style="height: 30%; width: 30%">
       <canvas id="polarchart" width="100" height="100"></canvas>
     </div> -->
+    <div style="background-color: white">
+      aa
+      <h3>h3</h3>
+      <div>hello</div>
+    </div>
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vero
+        rem? Nesciunt fugiat assumenda fugit tempora aliquam? Fugiat animi
+        quidem asperiores saepe ab maiores dolor facere tempora, odio aperiam
+        perspiciatis.
+      </p>
+    </div>
+    <section class="footer">
+      <div class="container text-center">
+        <p>
+          &copy; All Rights Reserved. Designed and Developed by Pendy Tok
+          (1181101110)
+        </p>
+      </div>
+    </section>
+
+    <div class="container60">
+      <div style="display: inline-block">
+        <h4>Vaccinated Population</h4>
+      </div>
+      <div style="display: inline-block; vertical-align: middle">
+        <img
+          src="images/malaysia-flag.png"
+          alt="Web Logo"
+          style="width: 10%; height: 10%"
+        />
+      </div>
+
+      <p style="font-size: small">Malaysia</p>
+    </div>
     <script>
 
       //drawLineChart();
